<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_app"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15sp"
    tools:context=".Login">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_launcher_foreground"
        android:backgroundTint="@color/white_app" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="200sp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/white_app"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/l_blue_app"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/d_blue_app"
        android:background="@drawable/custom_edit_text"
        android:autofillHints=""
        android:layout_marginBottom="15dp"
        android:textColor="@color/d_blue_app"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        android:textColorHint="@color/d_blue_app"
        android:background="@drawable/custom_edit_text"
        android:autofillHints=""
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        android:textColor="@color/d_blue_app"/>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:cornerRadius="12dp"
        android:backgroundTint="@color/d_blue_app"
        android:textColor="@color/white_app"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/goToRegister"
        android:layout_marginTop="15sp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_registration"
        android:textColor="@color/red_app"/>

</LinearLayout>